--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,7 @@ DATABASE_URL="file:./db.sqlite"
 NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+KAKAO_CLIENT_ID=""
+KAKAO_CLIENT_SECRET=""
+GITHUB_ID=""
+GITHUB_SECRET=""
