--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL="mysql://ID:PASSWORD@localhost:3306/DATABASE_NAME?schema=public"
 
 # Next Auth
 # You can generate a new secret on the command line with:
