Github Login 지원

--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,5 @@ DATABASE_URL="mysql://ID:PASSWORD@localhost:3306/DATABASE_NAME?schema=public"
 NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Discord Provider
-KAKAO_CLIENT_ID=""
-KAKAO_CLIENT_SECRET=""
-GITHUB_ID=""
-GITHUB_SECRET=""
+GITHUB_ID="d51d66f1a78100420b52"
+GITHUB_SECRET="6607807b662e93d09f4fd026d39e266d0d3158a4"
